# ink-risc0

./: Cargo.toml  README.md
flipper/: Cargo.toml  README.md  lib.rs  proof.rs
node/: Cargo.toml
provers/multiply/: Cargo.toml  README.md  proof.txt  res.txt
provers/multiply/host/: Cargo.toml
provers/multiply/host/src/: main.rs
provers/multiply/methods/: Cargo.toml
provers/multiply/methods/guest/: Cargo.toml
provers/multiply/multiply/: Cargo.toml
provers/multiply/multiply/src/: main.rs
provers/multiply/transfer/src/: main.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
