[package]
name = "flipper"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { path = "/Users/skyman/Projects/ink/crates/ink", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
risc0-zkvm = { default-features = false, path = "/Users/skyman/Projects/risc0/risc0/zkvm" }

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
	"risc0-zkvm/std",
]
ink-as-dependency = []
e2e-tests = []

